<resources>
    <string name="app_name">Staff</string>
    <string name="add_subject">Add New Subject</string>
    <string name="remove_edit">Remove/Edit Subject</string>
    <string name="setting">Setting</string>
    <string name="check_progression">Check Progression</string>
    <string name="student_support">Student Support</string>
    <string name="wel_msg">Welcome back!</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="select_file">Select Note</string>
    <string name="subject_name">Subject Name:</string>
    <string name="Sub_name">Subject name</string>
    <string name="subject_code">Subject Code: </string>
    <string name="sub_code">Subject code</string>
    <string name="desc">Description</string>
    <string name="notes">Notes</string>
    <string name="txt_exersice">Exercise:</string>
    <string name="select_exercise">Select Exercise</string>
    <string name="save">Save</string>
    <string name="get_subject_url">http://lansl-wa15.000webhostapp.com/select_subject.php</string>
    <string name="insert_subject_url">http://lansl-wa15.000webhostapp.com/insert_subject.php</string>
    <string name="action_settings">Settings</string>
    <string name="get_help">Get Help</string>
    <string name="appbar_scrolling_view_behavior" translatable="false">android.support.design.widget.AppBarLayout$ScrollingViewBehavior</string>
    <string name="Clear">clear</string>
    <string name="title_activity_subject">SubjectActivity</string>
    <string name="title">Subject Name: </string>
    <string name="code">Subject Code:</string>
    <string name="StudName">Student Name: </string>
    <string name="StudClass">Class: </string>
</resources>
