<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="my.edu.tarc.staff.MainActivity">

    <Button
        android:id="@+id/btn_add"
        android:layout_width="131dp"
        android:layout_height="96dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:onClick="add_subject_menu"
        android:text="@string/add_subject"
        app:layout_constraintBottom_toTopOf="@+id/btn_setting"
        app:layout_constraintEnd_toStartOf="@+id/btn_remove_edit"
        app:layout_constraintHorizontal_bias="0.527"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.82" />

    <Button
        android:id="@+id/btn_remove_edit"
        android:layout_width="131dp"
        android:layout_height="91dp"
        android:layout_marginBottom="40dp"
        android:layout_marginEnd="36dp"
        android:text="@string/remove_edit"
        app:layout_constraintBottom_toTopOf="@+id/btn_check"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/btn_setting"
        android:layout_width="131dp"
        android:layout_height="91dp"
        android:layout_marginBottom="149dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:text="@string/setting"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btn_check"
        app:layout_constraintHorizontal_bias="0.466"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        app:layout_constraintVertical_bias="0.981" />

    <Button
        android:id="@+id/btn_check"
        android:layout_width="130dp"
        android:layout_height="91dp"
        android:layout_marginBottom="152dp"
        android:layout_marginEnd="36dp"
        android:onClick="check_progression"
        android:text="@string/check_progression"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/btn_support"
        android:layout_width="130dp"
        android:layout_height="91dp"
        android:layout_marginBottom="32dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:text="@string/student_support"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="43dp"
        android:layout_marginEnd="29dp"
        android:layout_marginStart="156dp"
        android:layout_marginTop="16dp"
        app:layout_constraintBottom_toTopOf="@+id/btn_remove_edit"
        app:layout_constraintEnd_toStartOf="@+id/txtName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/ic_launcher_round" />

    <TextView
        android:id="@+id/txtName"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="211dp"
        android:layout_marginEnd="52dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="36dp"
        android:text="abc"
        app:layout_constraintBottom_toTopOf="@+id/btn_check"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.323"
        app:layout_constraintStart_toEndOf="@+id/imageView"
        app:layout_constraintTop_toTopOf="parent" />

</android.support.constraint.ConstraintLayout>
